--- a/app/src/main/res/layout/custom_dialog_exchange_complete.xml
+++ b/app/src/main/res/layout/custom_dialog_exchange_complete.xml
@@ -2,14 +2,14 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="145dp"
+        android:layout_height="155dp"
         android:background="@drawable/border_sliding_layout_background"
 >
 
     <ImageView
             android:id="@+id/exchange_complete_icon"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="22dp"
+            android:layout_marginTop="27dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/complete_v_icon"/>
@@ -27,27 +27,27 @@
             android:id="@+id/exchange_complete_text"
             android:layout_below="@+id/exchange_complete_icon"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/nanumsquareextrabold"
             android:includeFontPadding="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="23sp"
             android:textColor="#fdbd37"
             android:lineSpacingExtra="3sp"
             android:text="보내기 완료!"
     />
 
     <TextView
-            android:layout_below="@+id/exchange_complete_text"
+            android:layout_alignParentBottom="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="#858585"
-            android:layout_marginBottom="21dp"
+            android:layout_marginBottom="27dp"
             android:layout_centerHorizontal="true"
             android:lineSpacingExtra="2sp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
             android:text="계좌에 포인트리 보내기를 완료하였습니다."
