--- a/app/src/main/res/layout/activity_kb_sign.xml
+++ b/app/src/main/res/layout/activity_kb_sign.xml
@@ -9,13 +9,32 @@
         android:background="@android:color/white"
         android:orientation="vertical">
 
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <ImageView
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="140dp"
-            android:layout_width="100dp"
-            android:background="@android:color/holo_blue_dark"
-            android:layout_height="100dp"/>
+
+        <ImageView
+                android:id="@+id/kbSignImage"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="140dp"
+                android:layout_width="100dp"
+                android:background="@drawable/kb_login_profile_img"
+                android:layout_height="100dp"/>
+
+        <ImageView
+                android:layout_toRightOf="@+id/kbSignImage"
+                android:layout_below="@+id/kbSignImage"
+                android:layout_marginLeft="-28dp"
+                android:layout_marginTop="-28dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/kb_login_profile_revise_btn"/>
+
+
+    </RelativeLayout>
+
 
     <EditText
             android:id="@+id/kbSignId"
@@ -23,7 +42,8 @@
             android:paddingLeft="12.5dp"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
-            android:layout_marginTop="53.2dp"
+            android:textSize="13sp"
+            android:layout_marginTop="54dp"
             android:layout_width="match_parent"
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
@@ -35,6 +55,7 @@
             android:id="@+id/kbSignPw"
             android:hint="패스워드"
             android:paddingLeft="12.5dp"
+            android:textSize="13sp"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginTop="20dp"
@@ -52,6 +73,7 @@
             android:paddingLeft="12.5dp"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
+            android:textSize="13sp"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:fontFamily="@font/nanumsquareregular"
@@ -60,13 +82,29 @@
             android:background="@drawable/background_login_id"
     />
 
-    <ImageView
+    <RelativeLayout
             android:id="@+id/kbSignBtn"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/selector_sign_btn"/>
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:layout_marginHorizontal="36dp"
+            android:background="@drawable/border_background">
+
+
+        <TextView
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
+                android:fontFamily="@font/nanumsquarebold"
+                android:includeFontPadding="false"
+                android:lineSpacingExtra="2sp"
+                android:text="가입하기"
+        />
+
+    </RelativeLayout>
 
 
 </LinearLayout>
