--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
 
     <com.google.android.youtube.player.YouTubePlayerView
+            android:layout_marginTop="50dp"
             android:id="@+id/player"
 
             android:layout_width="match_parent"
@@ -40,6 +41,15 @@
                 android:textColor="@android:color/black"
                 android:layout_below="@id/playBtn"
                 android:id="@+id/pauseBtn"
+                android:layout_width="100dp"
+                android:background="@android:color/transparent"
+                android:layout_height="100dp"/>
+
+        <Button
+                android:text="다이얼로그"
+                android:textColor="@android:color/black"
+                android:layout_below="@id/playBtn"
+                android:id="@+id/DialogBtn"
                 android:layout_width="100dp"
                 android:background="@android:color/transparent"
                 android:layout_height="100dp"/>
