--- a/app/src/main/res/layout/fragment_coupon_home.xml
+++ b/app/src/main/res/layout/fragment_coupon_home.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
+        android:id="@+id/couponLayout"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+
+    <FrameLayout
+            android:id="@+id/frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
 
@@ -210,4 +217,4 @@
     </ScrollView>
 
 
-</LinearLayout>
+</RelativeLayout>
