--- a/app/src/main/res/layout/fragment_survey_double.xml
+++ b/app/src/main/res/layout/fragment_survey_double.xml
@@ -2,7 +2,7 @@
         android:layout_width="match_parent"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="66dp"
-        android:layout_height="wrap_content"
+        android:layout_height="92dp"
         android:elevation="3dp"
         android:background="@drawable/border_survey_background"
         android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
