--- a/app/src/main/res/layout/item_quiz_review.xml
+++ b/app/src/main/res/layout/item_quiz_review.xml
@@ -127,5 +127,10 @@
 
     </RelativeLayout>
 
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
