--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -11,6 +11,6 @@
     <com.pierfrancescosoffritti.androidyoutubeplayer.player.YouTubePlayerView
             android:layout_width="match_parent"
             android:id="@+id/youtube_plyer_view"
-            android:layout_height="wrap_content"></com.pierfrancescosoffritti.androidyoutubeplayer.player.YouTubePlayerView>
+            android:layout_height="wrap_content"/>
 
 </RelativeLayout>
