--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -5,20 +5,24 @@
         android:background="#00000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="16dp"
+
         android:orientation="vertical">
 
 
+    <!--약간 사이즈 작게 하고 싶으면 바로 밑에 있는 리니어 레이아웃에
+    android:layout_marginHorizontal="16dp" 추가하면됨.
+    -->
     <LinearLayout
             android:id="@+id/sliding_tops"
             android:elevation="1dp"
             android:background="@drawable/border_sliding_background"
-            android:layout_marginHorizontal="16dp"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
         <ScrollView
+                android:scrollbars="none"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
