--- a/app/src/main/res/layout/activity_quiz_review.xml
+++ b/app/src/main/res/layout/activity_quiz_review.xml
@@ -14,6 +14,7 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/white"
             android:elevation="10dp">
 
         <RelativeLayout
