--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,10 +5,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/white"
         tools:context=".view.SplashActivity">
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-              android:text="스플래쉬 화면"
-              android:layout_centerInParent="true"/>
+    <ImageView
+            android:id="@+id/splash_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/splash"/>
 
 </RelativeLayout>
