view detail 수정하고 있음.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -262,7 +262,7 @@
                 android:layout_weight="1"
                 android:layout_width="55dp"
                 android:layout_height="55dp"
-                android:src="@drawable/login_kakao"/>
+                android:src="@drawable/login_kb"/>
 
     </LinearLayout>
 </LinearLayout>
