--- a/app/src/main/res/layout/activity_coupon_shop.xml
+++ b/app/src/main/res/layout/activity_coupon_shop.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/white"
-            android:elevation="2dp">
+            android:elevation="1dp">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -50,6 +50,8 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="42dp"
+            android:background="@android:color/white"
+            android:elevation="1dp"
             android:orientation="horizontal">
 
         <RelativeLayout
