--- a/app/src/main/res/layout/custom_dialog_survey.xml
+++ b/app/src/main/res/layout/custom_dialog_survey.xml
@@ -45,10 +45,10 @@
     <RelativeLayout
             android:id="@+id/dialog_view"
             android:layout_width="match_parent"
-            android:layout_marginHorizontal="28dp"
+
             android:layout_below="@+id/dialog_icons"
             android:background="@drawable/border_sliding_layout_background"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
@@ -104,7 +104,8 @@
                 android:id="@+id/goToSurveyBtn"
                 android:layout_below="@+id/three_title"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="15dp"
                 android:layout_marginHorizontal="85dp"
                 android:layout_marginTop="17dp"
                 android:background="@drawable/border_show_detail_btn_background">
