--- a/app/src/main/res/layout/custom_dialog_survey_complete.xml
+++ b/app/src/main/res/layout/custom_dialog_survey_complete.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="145dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/border_sliding_layout_background"
         >
 
