--- a/app/src/main/res/layout/fragment_coupon_home.xml
+++ b/app/src/main/res/layout/fragment_coupon_home.xml
@@ -57,7 +57,7 @@
                 <ImageView
                         android:layout_marginTop="-10dp"
                         android:layout_below="@+id/coupon_text_two"
-                        android:background="@android:color/darker_gray"
+                        android:src="@drawable/couponshop_img"
                         android:layout_width="match_parent"
                         android:layout_height="183dp"/>
             </RelativeLayout>
