--- a/app/src/main/res/layout/custom_dialog_survey.xml
+++ b/app/src/main/res/layout/custom_dialog_survey.xml
@@ -7,124 +7,124 @@
         android:orientation="vertical">
 
 
-    <RelativeLayout
-            android:id="@+id/dialog_icons"
-            android:layout_width="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="30dp"
-            android:background="#00000000"
-            android:gravity="bottom"
-            android:paddingLeft="50dp"
-            android:paddingRight="50dp"
-            android:orientation="horizontal">
+    <!--<RelativeLayout-->
+            <!--android:id="@+id/dialog_icons"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:background="#00000000"-->
+            <!--android:gravity="bottom"-->
+            <!--android:paddingLeft="50dp"-->
+            <!--android:paddingRight="50dp"-->
+            <!--android:orientation="horizontal">-->
 
-        <ImageView
-                android:id="@+id/yellow_icon"
-                android:layout_alignParentBottom="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/attendance_character_yellow"/>
+        <!--<ImageView-->
+                <!--android:id="@+id/yellow_icon"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:src="@drawable/attendance_character_yellow"/>-->
 
-        <ImageView
-                android:layout_toRightOf="@+id/yellow_icon"
-                android:id="@+id/blue_icon"
-                android:layout_marginLeft="12dp"
-                android:layout_alignParentBottom="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/attendance_character_blue"/>
+        <!--<ImageView-->
+                <!--android:layout_toRightOf="@+id/yellow_icon"-->
+                <!--android:id="@+id/blue_icon"-->
+                <!--android:layout_marginLeft="12dp"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:src="@drawable/attendance_character_blue"/>-->
 
-        <ImageView
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_width="42dp"
-                android:layout_height="17dp"
-                android:src="@drawable/attendance_character_lavender"/>
-    </RelativeLayout>
+        <!--<ImageView-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:layout_width="42dp"-->
+                <!--android:layout_height="17dp"-->
+                <!--android:src="@drawable/attendance_character_lavender"/>-->
+    <!--</RelativeLayout>-->
 
-    <RelativeLayout
-            android:id="@+id/dialog_view"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="28dp"
-            android:layout_below="@+id/dialog_icons"
-            android:background="@drawable/border_sliding_layout_background"
-            android:layout_height="200dp"
-            android:orientation="vertical">
-
-
-        <ImageView
-                android:id="@+id/survey_dialog_x_button"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/mypage_x_btn"/>
+    <!--<RelativeLayout-->
+            <!--android:id="@+id/dialog_view"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_marginHorizontal="28dp"-->
+            <!--android:layout_below="@+id/dialog_icons"-->
+            <!--android:background="@drawable/border_sliding_layout_background"-->
+            <!--android:layout_height="200dp"-->
+            <!--android:orientation="vertical">-->
 
 
-        <ImageView
-                android:id="@+id/one_title"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/survey_popup_icon"
-                android:layout_marginTop="21dp"/>
-
-        <TextView
-                android:layout_below="@+id/one_title"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/two_title"
-                android:layout_marginTop="18.5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/nanumsquareextrabold"
-                android:includeFontPadding="false"
-                android:textSize="20sp"
-                android:textColor="#fdbd37"
-                android:lineSpacingExtra="3sp"
-                android:text="설문이 도착했어요!"
-        />
-
-        <TextView
-                android:layout_below="@+id/two_title"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/three_title"
-                android:layout_marginTop="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="#c7c7c7"
-                android:lineSpacingExtra="1sp"
-                android:fontFamily="@font/nanumsquareregular"
-                android:includeFontPadding="false"
-                android:text="설문에 참여하면 포인트리를 얻을 수 있어요."
-        />
-
-        <RelativeLayout
-                android:id="@+id/goToSurveyBtn"
-                android:layout_below="@+id/three_title"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginHorizontal="85dp"
-                android:layout_marginTop="17dp"
-                android:background="@drawable/border_show_detail_btn_background">
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="#ffffff"
-                    android:lineSpacingExtra="2sp"
-                    android:text="설문하기"
-                    android:layout_centerInParent="true"
-                    android:fontFamily="@font/nanumsquareextrabold"
-                    android:includeFontPadding="false"
-            />
-
-        </RelativeLayout>
+        <!--<ImageView-->
+                <!--android:id="@+id/survey_dialog_x_button"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_marginTop="16dp"-->
+                <!--android:layout_marginRight="16dp"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:src="@drawable/mypage_x_btn"/>-->
 
 
-    </RelativeLayout>
+        <!--<ImageView-->
+                <!--android:id="@+id/one_title"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:src="@drawable/survey_popup_icon"-->
+                <!--android:layout_marginTop="21dp"/>-->
+
+        <!--<TextView-->
+                <!--android:layout_below="@+id/one_title"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:id="@+id/two_title"-->
+                <!--android:layout_marginTop="18.5dp"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fontFamily="@font/nanumsquareextrabold"-->
+                <!--android:includeFontPadding="false"-->
+                <!--android:textSize="20sp"-->
+                <!--android:textColor="#fdbd37"-->
+                <!--android:lineSpacingExtra="3sp"-->
+                <!--android:text="설문이 도착했어요!"-->
+        <!--/>-->
+
+        <!--<TextView-->
+                <!--android:layout_below="@+id/two_title"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:id="@+id/three_title"-->
+                <!--android:layout_marginTop="8dp"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textSize="12sp"-->
+                <!--android:textColor="#c7c7c7"-->
+                <!--android:lineSpacingExtra="1sp"-->
+                <!--android:fontFamily="@font/nanumsquareregular"-->
+                <!--android:includeFontPadding="false"-->
+                <!--android:text="설문에 참여하면 포인트리를 얻을 수 있어요."-->
+        <!--/>-->
+
+        <!--<RelativeLayout-->
+                <!--android:id="@+id/goToSurveyBtn"-->
+                <!--android:layout_below="@+id/three_title"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:layout_marginHorizontal="85dp"-->
+                <!--android:layout_marginTop="17dp"-->
+                <!--android:background="@drawable/border_show_detail_btn_background">-->
+
+            <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textSize="16sp"-->
+                    <!--android:textColor="#ffffff"-->
+                    <!--android:lineSpacingExtra="2sp"-->
+                    <!--android:text="설문하기"-->
+                    <!--android:layout_centerInParent="true"-->
+                    <!--android:fontFamily="@font/nanumsquareextrabold"-->
+                    <!--android:includeFontPadding="false"-->
+            <!--/>-->
+
+        <!--</RelativeLayout>-->
+
+
+    <!--</RelativeLayout>-->
 
 
 </RelativeLayout>
