--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="backColor">#f6f6f6</color>
     <color name="white">#FFFFFF</color>
     <color name="viewColor">#e0e0e0</color>
+    <color name="transparent">#00000000</color>
 </resources>
