--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -11,12 +11,18 @@
 
     <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+            android:layout_width="match_parent"
             android:background="@android:color/transparent"
             android:layout_height="match_parent"
             android:layout_above="@+id/live_vp">
 
         <com.pierfrancescosoffritti.androidyoutubeplayer.player.YouTubePlayerView
-                android:layout_centerVertical="true"
+
                 android:layout_width="match_parent"
                 android:id="@+id/live_youtube_plyer_view"
                 android:layout_height="wrap_content"
@@ -35,9 +41,24 @@
 
     <app.woovictory.liiv_live.util.indicator.CircleAnimIndicator
             android:id="@+id/live_indicator"
-            android:layout_alignParentBottom="true"
-            android:layout_width="30dp"
+            android:layout_above="@+id/live_bottom_title"
+            android:layout_width="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
-            android:layout_height="30dp"/>
+            android:layout_height="wrap_content"/>
+
+    <TextView
+            android:id="@+id/live_bottom_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:textColor="#ffffff"
+            android:lineSpacingExtra="10sp"
+            android:fontFamily="@font/nanumsquarebold"
+            android:includeFontPadding="false"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="채팅을  보려면 왼쪽에서 오른쪽으로 밀어주세요!"
+            android:layout_marginBottom="31dp"
+    />
 </RelativeLayout>
