--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -86,6 +86,7 @@
                     android:orientation="horizontal">
 
                 <TextView
+                        android:id="@+id/mypage_nick"
                         android:fontFamily="@font/nanumsquarebold"
                         android:includeFontPadding="false"
                         android:layout_width="wrap_content"
@@ -109,6 +110,7 @@
             </LinearLayout>
 
             <TextView
+                    android:id="@+id/mypage_id"
                     android:layout_marginTop="6dp"
                     android:fontFamily="@font/nanumsquareregular"
                     android:includeFontPadding="false"
