--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -16,14 +16,19 @@
             android:id="@+id/sliding_tops"
             android:elevation="1dp"
             android:background="@drawable/border_sliding_background"
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+        <ImageView
+                android:layout_marginTop="10dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/home_slide_btn"
+                android:layout_gravity="center_horizontal"/>
 
         <ScrollView
                 android:scrollbars="none"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -31,6 +36,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
+
 
 
                 <RelativeLayout
