--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFF</color>
     <color name="viewColor">#e0e0e0</color>
     <color name="transparent">#00000000</color>
+    <color name="nonCheckAnswer">#f6f6f6</color>
+    <color name="redColor">#ff3232</color>
 </resources>
